--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
   <img src="/images/switcher.png" alt="Выключатель света" class="switcher-image" id="switcher" />
   
   <!-- Аудио элементы -->
-  <audio id="switchSound" src="/sound/click.mp3" preload="auto"></audio>
-  <audio id="startSound" src="/sound/start.mp3" preload="auto"></audio>
-  <audio id="pauseSound" src="/sound/pause.mp3" preload="auto"></audio>
-  <audio id="resetSound" src="/sound/reset.mp3" preload="auto"></audio>
+  <audio id="switchSound" src="/sounds/click.mp3" preload="auto"></audio>
+  <audio id="startSound" src="/sounds/start.mp3" preload="auto"></audio>
+  <audio id="pauseSound" src="/sounds/pause.mp3" preload="auto"></audio>
+  <audio id="resetSound" src="/sounds/reset.mp3" preload="auto"></audio>
 
   <!-- Девочка с часами - теперь в 2 раза больше -->
   <img src="/images/timegirl.png" alt="Девочка показывает на часы" class="time-girl" id="timeGirl" />
