--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
       right: 0; /* Теперь впритык к правому краю */
     }
   </style>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="d0cd950c-5859-4c4a-85c5-29d885bb3d5d"></script>
 </head>
 <body>
   <img src="/images/upleft.png" alt="Орнамент в левом углу" class="corner-image" />
@@ -504,3 +505,4 @@
   </script>
 </body>
 </html>
+
