--- a/index.html
+++ b/index.html
@@ -568,7 +568,22 @@
       "Терпение и труд всё перетрут.",
       "Семь раз отмерь, один раз отрежь.",
       "Сила есть — ума не надо.",
-      "Кто рано встаёт, тому Бог подаёт."
+      "В капитализме свобода — это право умереть с голоду под рекламой фастфуда.",
+      "В капитализме даже мораль становится товаром. Милосердие — это реклама. Борьба за права — это бренд.",
+      "Капитализм научил нас ценить вещи и забывать о людях.",
+      "Бедность при социализме — это проблема. Бедность при капитализме — это бизнес.",
+      "Капиталисты умеют красиво говорить о свободе, пока нанимают полицию, чтобы защититься от голодных.",
+      "Капитализм — это каннибализм, замаскированный под обмен услуг.",
+      "Я побывал в стране, где богатство не значит власть, а труд — не позор, а честь. Это Советский Союз.",
+      "Социализм не идеален, но это единственный путь преодоления отчуждённости и несправедливости.",
+      "В Советском Союзе я впервые почувствовал себя человеком, а не чёрным. Там не спрашивали цвет кожи — там спрашивали, кем ты хочешь быть.",
+      "Капитализм порождает эксплуатацию, анархию и эгоизм. Социализм может дать человечеству шанс выжить.",
+      "Советский Союз был единственной великой державой, которая безоговорочно поддерживала нас в борьбе с апартеидом. Мы этого не забудем никогда.",
+      "Советский Союз показал миру, что можно жить иначе. Без хозяев, без богачей, без рабства. С уважением к человеку труда.",
+      "В СССР у всех была квартира. На Западе — ипотека, реклама и депрессия.",
+      "Соединённые Штаты не имеют друзей, у них есть только интересы.",
+      "Для США война — это бизнес. Мир — это угроза прибыли.",
+      "США защищают “права человека” только в тех странах, где есть нефть.",
     ];
 
     const quoteElement = document.getElementById('quoteText');
